<resources>
    <string name="app_name">My Day Today</string>
    <string name="entry_focusTitle">Focus of the Day</string>
    <string name="entry_focusHint">What have I focused on today?</string>
    <string name="entry_prioritiesTitle">Priorities of the Day</string>
    <string name="entry_prioritiesHint">What were my priorities today?</string>
    <string name="entry_goalsTitle">Goals of the day</string>
    <string name="entry_goalsHint">Set a goal</string>
    <string name="entry_goalDeleteButtonDescription">Delete this goal</string>
    <string name="entry_goalAddButtonDescription">Add a new goal</string>
    <string name="entry_learnedTodayTitle">What I learned</string>
    <string name="entry_learnedTodayHint">What are the things I learned today?</string>
    <string name="entry_avoidTomorrowTitle">To avoid the next day</string>
    <string name="entry_avoidTomorrowHint">What are the things I should avoid tomorrow?</string>
    <string name="entry_thankfulForTitle">I am Thankful For:</string>
    <string name="entry_thankfulForHint">What am I thankful for today?</string>
    <string name="entry_confirmMoodScoreEmptyMessage">You forgot to select your mood.\nAre you sure you want to submit?</string>
    <string name="entry_confirmFocusEmptyMessage">You forgot to talk about your focus of the day.\nAre you sure you want to submit?</string>
    <string name="entry_confirmPrioritiesEmptyMessage">You forgot to write your priorities of the day.\nAre you sure you want to submit?</string>
    <string name="entry_confirmGoalsEmptyMessage">You didn\'t add any goals for this day.\nAre you sure you want to submit?</string>
    <string name="entry_confirmGoalsUncheckedMessage">You didn\'t mark any goal as completed.\nAre you sure you want to submit?</string>
    <string name="entry_confirmLearnedTodayEmptyMessage">You forgot to write what you learned today.\nAre you sure you want to submit?</string>
    <string name="entry_confirmAvoidTomorrowEmptyMessage">You forgot to say the things you should avoid tomorrow.\nAre you sure you want to submit?</string>
    <string name="entry_confirmThankfulForEmptyMessage">You forgot to say what you are thankful for today.\nAre you sure you want to submit?</string>
    <string name="entry_confirmEmptyFieldTrue">Yes, I\'m sure</string>
    <string name="entry_confirmEmptyFieldFalse">Go back!</string>
    <string name="newEntry_label">%1$s - Create a new entry</string>
    <string name="newEntry_submitSuccessToast">New entry recorded!</string>
    <string name="updateEntry_submitSuccessToast">Updated successfully!</string>
    <string name="editEntry_label">%1$s - Edit this entry</string>
    <string name="emptyDay_label">%1$s - This day is empty</string>
    <string name="emptyDay_noEntryMessage">Looks like you didn\'t write anything about this day yet.\nDon\'t worry, you still have a chance to do it.\nJust tap the button below:</string>
    <string name="currentEntry_moodScoreImageDescription">This day\'s mood - %1$s</string>
    <string name="currentEntry_moodScoreDescription0">Horrible</string>
    <string name="currentEntry_moodScoreDescription1">Bad</string>
    <string name="currentEntry_moodScoreDescription2">Normal</string>
    <string name="currentEntry_moodScoreDescription3">Good</string>
    <string name="currentEntry_moodScoreDescription4">Perfect</string>
    <string name="currentEntry_moodScoreDescriptionNull">No mood today</string>
    <string name="currentEntry_deleteConfirmationMessage">This will permanently delete this entry from your log.\nBe aware that it will not be possible to recover your entry after this.\n\nAre you sure you want to delete this entry?</string>
    <string name="currentEntry_deleteConfirmationTrue">Delete entry</string>
    <string name="currentEntry_deleteConfirmationFalse">Go back</string>
    <string name="currentEntry_deleteConfirmationDone">Entry deleted successfully!</string>
    <string name="tomorrowEntry_label">%1$s - Plan the next day</string>
    <string name="tomorrowEntry_tomorrowFocusHint">What should I focus on tomorrow?</string>
    <string name="tomorrowEntry_tomorrowPrioritiesHint">What are my priorities tomorrow?</string>
    <string name="concludeEntry_label">%1$s - Complete today\'s entry</string>
    <string name="home_planTomorrowButtonDescription">Plan Tomorrow</string>
    <string name="home_concludeTodayButtonDescription">Complete today\'s entry</string>
</resources>