<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RadioGroup
        android:id="@+id/concludeEntry_moodScoreRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/moodScore0"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:background="@drawable/drawable_radio_mood_0"
            android:button="@null"
            android:checked="false" />

        <RadioButton
            android:id="@+id/moodScore1"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_marginStart="16dp"
            android:background="@drawable/drawable_radio_mood_1"
            android:button="@null" />

        <RadioButton
            android:id="@+id/moodScore2"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_marginStart="16dp"
            android:background="@drawable/drawable_radio_mood_2"
            android:button="@null" />

        <RadioButton
            android:id="@+id/moodScore3"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_marginStart="16dp"
            android:background="@drawable/drawable_radio_mood_3"
            android:button="@null" />

        <RadioButton
            android:id="@+id/moodScore4"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_marginStart="16dp"
            android:background="@drawable/drawable_radio_mood_4"
            android:button="@null" />

    </RadioGroup>

    <TextView
        android:id="@+id/concludeEntry_todayFocusTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/entry_focusTitle"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/concludeEntry_moodScoreRadioGroup" />

    <TextView
        android:id="@+id/concludeEntry_todayFocusBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/concludeEntry_todayFocusTitle" />

    <TextView
        android:id="@+id/concludeEntry_todayPrioritiesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/entry_prioritiesTitle"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/concludeEntry_todayFocusBody" />

    <TextView
        android:id="@+id/concludeEntry_todayPrioritiesBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/concludeEntry_todayPrioritiesTitle" />
    
    <TextView
        android:id="@+id/concludeEntry_learnedTodayTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/entry_learnedTodayTitle"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/concludeEntry_todayPrioritiesBody" />

    <EditText
        android:id="@+id/concludeEntry_learnedTodayBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/entry_learnedTodayHint"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/concludeEntry_learnedTodayTitle" />

    <TextView
        android:id="@+id/concludeEntry_avoidTomorrowTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/entry_avoidTomorrowTitle"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/concludeEntry_learnedTodayBody" />

    <EditText
        android:id="@+id/concludeEntry_avoidTomorrowBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/entry_avoidTomorrowHint"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/concludeEntry_avoidTomorrowTitle" />

    <TextView
        android:id="@+id/concludeEntry_thankfulForTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/entry_thankfulForTitle"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/concludeEntry_avoidTomorrowBody" />

    <EditText
        android:id="@+id/concludeEntry_thankfulForBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="85dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/entry_thankfulForHint"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/concludeEntry_thankfulForTitle" />

</android.support.constraint.ConstraintLayout>